artifact/cleanup-report/checks/python_compile_after.txt
Listing '.'...
Listing './.git'...
Listing './.git/hooks'...
Listing './.git/info'...
Listing './.git/logs'...
Listing './.git/logs/refs'...
Listing './.git/logs/refs/heads'...
Listing './.git/logs/refs/heads/copilot'...
Listing './.git/logs/refs/remotes'...
Listing './.git/logs/refs/remotes/origin'...
Listing './.git/logs/refs/remotes/origin/copilot'...
Listing './.git/objects'...
Listing './.git/objects/00'...
Listing './.git/objects/03'...
Listing './.git/objects/05'...
Listing './.git/objects/0b'...
Listing './.git/objects/11'...
Listing './.git/objects/23'...
Listing './.git/objects/27'...
Listing './.git/objects/35'...
Listing './.git/objects/54'...
Listing './.git/objects/57'...
Listing './.git/objects/5a'...
Listing './.git/objects/85'...
Listing './.git/objects/aa'...
Listing './.git/objects/c1'...
Listing './.git/objects/c2'...
Listing './.git/objects/e0'...
Listing './.git/objects/e2'...
Listing './.git/objects/f6'...
Listing './.git/objects/info'...
Listing './.git/objects/pack'...
Listing './.git/refs'...
Listing './.git/refs/heads'...
Listing './.git/refs/heads/copilot'...
Listing './.git/refs/remotes'...
Listing './.git/refs/remotes/origin'...
Listing './.git/refs/remotes/origin/copilot'...
Listing './.git/refs/tags'...
Listing './.idea'...
Listing './.idea/inspectionProfiles'...
Listing './artifact'...
Listing './artifact/cleanup-report'...
Listing './artifact/cleanup-report/checks'...
Listing './artifact/cleanup-report/format_diffs'...
Listing './artifact/cleanup-report/linters'...
Listing './artifact/cleanup-report/tests'...
Compiling './financiero_viabilidad_tablas.py'...
***   File "./financiero_viabilidad_tablas.py", line 1888
    treatment not in intervention:
                                 ^
SyntaxError: invalid syntax

Compiling './semantic_chunking_policy.py'...
*** Sorry: IndentationError: expected an indented block after function definition on line 109 (semantic_chunking_policy.py, line 112)
